--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "glob": "^10.3.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "rollup-plugin-copy": "^3.5.0",
         "typescript": "^5.2.2",
         "vite": "^5.0.8",
         "vite-plugin-dts": "^3.7.1",
