--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@vixen-front/ui",
+    "name": "vixen-front-ui",
     "private": false,
     "version": "0.0.1",
     "type": "module",
